[package]
name = "core"
version = "0.1.0"
authors = ["FenQiDian <email@fenqi.moe>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
approx = "0.4.0"
collide = { path = "../collide" }
derivative = "2.2.0"
derive = { path = "../derive" }
gdnative = "0.9.3"
lazy_static = "1.4.0"
libc = "0.2.94"
log = "0.4.14"
math = { path = "../math" }
nalgebra = { version = "0.26.2", features = [ "serde-serialize" ] }
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
strum = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0.24"
typetag = "0.1.7"
wavefront_obj = "10.0.0"
