[package]
name = "math"
version = "0.1.0"
authors = ["FenQiDian <email@fenqi.moe>"]
edition = "2018"

[dependencies]
approx = "0.3"
cordic = "0.1"
fixed = { version = "1", features = [ "serde" ] }
nalgebra = "0.21"
num-traits = { version = "0.2.11", features = ["libm"] }
rand = "0.7"
serde = "1"
simba = { version = "0.1", features = [ "partial_fixed_point_support" ] }