[package]
name = "math"
version = "0.1.0"
authors = ["FenQiDian <email@fenqi.moe>"]
edition = "2018"

[dependencies]
approx = "0.4.0"
cordic = "0.1.4"
derivative = "2.1.1"
fixed = { version = "1.5.0", features = [ "serde" ] }
nalgebra = "0.23.0"
ncollide3d = { version = "0.26.1", features = [ "improved_fixed_point_support" ] }
num-traits = { version = "0.2.14", features = ["libm"] }
rand = "0.7.3"
serde = "1.0.117"
simba = { version = "0.3.1", features = [ "partial_fixed_point_support" ] }
