[package]
name = "math"
version = "0.1.0"
authors = ["FenQiDian <email@fenqi.moe>"]
edition = "2018"

[dependencies]
approx = "0.4.0"
cordic = "0.1.5"
derivative = "2.2.0"
fixed = { version = "1.9.0", features = [ "serde" ] }
nalgebra = "0.26.2"
ncollide3d = { version = "0.29.0", features = [ "improved_fixed_point_support" ] }
num-traits = { version = "0.2.14", features = ["libm"] }
rand = "0.8.3"
serde = "1.0.126"
simba = "0.4.0"
