[package]
name = "plugin"
version = "0.1.0"
authors = ["FenQiDian <email@fenqi.moe>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "critical_point"

[build-dependencies]
bindgen = "0.53"
cc = "1.0"
regex = "1"

[dependencies]
lazy_static = "1.4"
failure = "0.1"
gdnative = "0.8"
libc = "0.2"

macros = { path = "../macros" }
