[package]
name = "plugin-gd"
version = "0.1.0"
authors = ["FenQiDian <email@fenqi.moe>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "critical_point_gd"

[dependencies]
core = { path = "../core" }
euclid = "0.20"
failure = "0.1"
gdnative = { git = "https://github.com/godot-rust/godot-rust", tag = "0.9.0-preview.0" }
lazy_static = "1"
maplit = "1"
math = { path = "../math" }
nalgebra = { version = "0.21", features = [ "serde-serialize" ] }
serde = "1"
serde_json = "1"
