[package]
name = "plugin-gd"
version = "0.1.0"
authors = ["FenQiDian <email@fenqi.moe>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib"]
name = "critical_point_gd"

[dependencies]
anyhow = "1anyhow = "1.0.34"
core = { path = "../core" }
derivative = "2.2.0"
euclid = "0.22.1"
gdnative = "0.9.1"
lazy_static = "1.4.0"
maplit = "1.0.2"
math = { path = "../math" }
nalgebra = { version = "0.23.0", features = [ "serde-serialize" ] }
serde = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.8.14"
