[package]
name = "plugin-u3d"
version = "0.1.0"
authors = ["FenQiDian <email@fenqi.moe>"]
edition = "2018"
resolver = "2"
build = "build.rs"

[lib]
crate-type = ["cdylib"]
name = "critical_point_u3d"

[dependencies]
anyhow = "1.0.40"
core = { path = "../core" }
libc = "0.2.94"
log = "0.4.14"
math = { path = "../math" }
simplelog = "0.10.0"
