[package]
name = "script"
version = "0.1.0"
authors = ["FenQiDian <email@fenqi.moe>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
approx = "0.4.0"
derive = { path = "../derive" }
lazy_static = "1.4.0"
math = { path = "../math" }
pest = "2.1.3"
pest_derive = "2.1.0"
simba = "0.4.0"
thiserror = "1.0.25"
